gcp/strava-cli-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strava-cli
  labels:
    app: strava-cli
spec:
  replicas: 1
  selector:
    matchLabels:
      app: strava-cli
  template:
    metadata:
      labels:
        app: strava-cli
    spec:
      containers:
        - image: gcr.io/strava-cli/strava-cli:latest
          name: strava-cli
          ports:
            - containerPort: 8080
              name: strava-cli
