gcp/strava-cli-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: strava-cli
  labels:
    app: strava-cli
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: strava-cli
